feat: 이용약관 조회 로직 수정(#63)